# lmm-education

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  RaggedDocument.md  Specification.md  appChat.py  appVideocast.py  appWebcast.py  index.html  lme.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml
API/Apps/: index.html
API/Configuration/: index.html
API/appbase/: index.html
API/apputils/: index.html
API/asyncutils/: index.html
API/background_task_manager/: index.html
API/chat_agent/: index.html
API/chat_stream_adapters/: index.html
API/chat_workflow/: index.html
dashboard/: README.md  Start.py  data.py  translations.py
develop_docs/: VideocastRefactoring.md  Workflows.md
docs/: index.md
img/: Architecture.ai
lmm_education/: __init__.py  __main__.py  appChat.py  appVideocast.py  appWebcast.py  apputils.py  asyncutils.py  background_task_manager.py  chat_graph.py  graph_logging_base.py  ingest.py  lme.py  lmme.py  logging_db.py  query.py  queryDatabase.py  querydb.py  scan_rag.py  stream_adapters.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_appchat.py  test_async_vector_store_qdrant.py  test_async_vector_store_qdrant_groups.py  test_async_vector_store_qdrant_langchain.py  test_chat_stream_adapters.py  test_chatagent.py  test_chatgraph.py  test_chunks.py  test_config.py  test_config_appchat.py  test_config_utils.py  test_ingest.py  test_integration.py  test_integration_ingestion_query.py  test_mocks.py  test_namespace.py  test_query.py  test_querydb.py  test_stream_adapters.py  test_vector_store_qdrant.py  test_vector_store_qdrant_context.py  test_vector_store_qdrant_docstring_examples.py  test_vector_store_qdrant_errors.py  test_vector_store_qdrant_groups.py  test_vector_store_qdrant_langchain.py  test_vector_store_qdrant_utils.py  test_workflow_base.py  xtest_vector_store_qdrant_nointernet.py
webcast_sources/: Lecture8_00.txt  Lecture8_01.psd  Lecture8_01.txt  Lecture8_02.txt  Lecture8_03.txt  Lecture8_04.txt  Lecture8_05.txt  Lecture8_06.txt  lecture_list.json
(+123 files in other folders)
