[project]
name = "lmm-education"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Viviani",email = "roberto.viviani@uibk.ac.at"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.14.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "lmm @ git+https://git.uibk.ac.at/c7201031/lmm.git@main",
    "fastembed (>=0.7.1,<0.8.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = ["lmm_education/py.typed"]

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
pytest = "^8.4.1"


[tool.poetry.dependencies]
lmm = {develop = true}

