[project]
name = "lmm-education"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Viviani",email = "roberto.viviani@uibk.ac.at"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.14"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "lmm @ git+https://c7201031:FZkqlscljWaqtQ_ZCT3lwm86MQp1OjNvMQk.01.0z0nnrty0@git.uibk.ac.at/c7201031/lmm.git",
    "fastembed (>=0.7.1,<0.8.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "gradio (>=5.46.0,<6.0.0)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "openai-whisper (>=20250625,<20250626)",
    "moviepy (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = ["lmm_education/py.typed"]

[tool.poetry.scripts]
lmme = "lmm_education.lmme:app"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
pytest = "^8.4.1"
mkdocstrings = "^0.30.1"
mkdocstrings-python = "^1.18.2"


[tool.poetry.dependencies]
lmm = {develop = true}
